[tool.poetry]
name = "fastapi-rest-framework"
version = "0.1.0"
description = ""

license = "MIT"

authors = [
    "Maxim Bigin <i@flaiers.me>"
]

readme = "README.md"
repository = "https://github.com/flaiers/fastapi-rest-framework"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
